--- a/src/index.css
+++ b/src/index.css
@@ -1,28 +1,35 @@
-/* body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+* { margin: 0px;padding: 0px; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; text-decoration: none; }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-} */
+body, html {height: 100%; width: 100%;}
 
+.navBar { margin-bottom: 3%; margin-top: 3%; display: flex; align-items: center; justify-content: space-around; width: 80%; }
+  
+.navBar__links { display: flex; justify-content: space-around; flex-wrap: nowrap; align-items: center; padding: 10px; }
 
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+.navBar__links a { padding: 10px; margin: 10px; }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+.botones { width:120px; height:50px; background-color:#dfd3c2; font-weight: bold; -webkit-border-radius: 50px; 
+  -moz-border-radius: 50px; border-radius: 50px; font-size:12px; text-transform: uppercase;}
+
+.botones:hover { opacity: 0.50; -moz-opacity: .50; filter:alpha (opacity=50); }
+
+.botonMenos { width:30px; height:30px; background-color:#000000; font-size: 1.2rem; color: rgb(255, 255, 255); 
+  font-weight: bold; -webkit-border-radius: 50px; -moz-border-radius: 50px; border-radius: 50px; text-transform: uppercase; }
+    
+.botonMenos:hover { opacity: 0.50; -moz-opacity: .50; filter:alpha (opacity=50); }
+
+.main { width: 80%; }
+
+.lista { width: 100%; margin-top: 20px; margin-bottom: 50px; display: flex; flex-direction: row; justify-content: space-around; flex-wrap: wrap; }
+
+.container { display: flex; flex-direction: column; align-items: center; justify-content: center; }
+      
+.modal { position: absolute; padding: 54px; background: antiquewhite; border: 2px solid #ccc; }
+          
+.modalTexto { text-align: center; font-size: 1.25rem; }
+
+.order { display: flex; flex-direction: column; align-items: center;}
+              
+.orderInput { font-size: 20px; margin: 10px; background-color: antiquewhite; }
+               
+@media (max-width: 1400px) { .navBar { width: 100%; } }
